Fix clipping of bottom margin of device previews

--- a/packages/block-editor/src/components/iframe/content.scss
+++ b/packages/block-editor/src/components/iframe/content.scss
@@ -14,7 +14,17 @@
 
 .block-editor-iframe__scale-container {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+iframe[name="editor-canvas"] {
+	flex: 0 0 auto;
+
+	.with-frame-flex-height.block-editor-iframe__container & {
+		flex: 1 0 auto;
+	}
 }
 
 .is-zoomed-out.block-editor-iframe__container .block-editor-iframe__scale-container {
